--- a/index.html
+++ b/index.html
@@ -116,29 +116,29 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title is-bold">
             <img src="static/images/mathvista.png" style="width:1em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista" style="vertical-align: middle">MathVista</span>
+            <span class="mathvista" style="vertical-align: middle">DOCMATH-EVAL</span>
             </h1>
           <h2 class="subtitle is-3 publication-subtitle">
-            Evaluating Math Reasoning in Visual Contexts
+            Evaluating Math Reasoning Capabilities of LLMs in Understanding Financial Documents
             <!-- <br> -->
             <!-- with GPT-4V, Bard, and Other Large Multimodal Models -->
           </h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://lupantech.github.io/">Pan Lu</a><sup style="color:#6fbf73;">1</sup>,</span>
+              <a href="https://yilunzhao.github.io//">Yilun Zhao</a><sup style="color:#6fbf73;">1</sup>,</span>
             <span class="author-block">
-              <a href="https://sites.google.com/view/hbansal">Hritik Bansal</a><sup style="color:#6fbf73;">1</sup>,</span>
+              <a href="https://yitaolong.github.io/">Yitao Long</a><sup style="color:#6fbf73;">2</sup>,</span>
             <span class="author-block">
-              <a href="https://tonyxia2001.github.io/">Tony Xia</a><sup style="color:#6fbf73;">1</sup>,
+              Hongjun Liu</a><sup style="color:#6fbf73;">2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://liujch1998.github.io/">Jiacheng Liu</a><sup style="color:#ed4b82">2</sup>,
+              <a href="https://ryokamoi.github.io/">Ryo Kamoi</a><sup style="color:#ed4b82">3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://chunyuan.li/">Chunyuan Li</a><sup style="color:#ffac33">3</sup>,
+              <a href="https://linyongnan.github.io/">Linyong Nan</a><sup style="color:#ffac33">1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~hannaneh/">Hannaneh Hajishirzi</a><sup style="color:#ed4b82">2</sup>,
+              Lyuhao Chen</a><sup style="color:#ed4b82">4</sup>,
             </span>
             <span class="author-block">
               <a href="https://sites.google.com/site/hcheng2site/Home">Hao Cheng</a><sup style="color:#ffac33">3</sup>,
@@ -155,9 +155,10 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup style="color:#6fbf73;">1</sup>University of California, Los Angeles,</span><br>
-            <span class="author-block"><sup style="color:#ed4b82">2</sup>University of Washington,</span>
-            <span class="author-block"><sup style="color:#ffac33">3</sup>Microsoft Research</span><br>
+            <span class="author-block"><sup style="color:#6fbf73;">1</sup>Yale University,</span><br>
+            <span class="author-block"><sup style="color:#ed4b82">2</sup>New York University,</span>
+            <span class="author-block"><sup style="color:#ffac33">3</sup>Penn State University</span><br>
+            <span class="author-block"><sup style="color:#ffac33">4</sup>Carnegit Mellon University</span>
             <span class="paper-block"><b style="color:#f41c1c">ICLR 2024 Oral</b> (85 in 7304, 1.2%)</span>
           </div>
         
