--- a/index.html
+++ b/index.html
@@ -127,30 +127,30 @@
             <span class="author-block">
               <a href="https://yilunzhao.github.io//">Yilun Zhao</a><sup style="color:#6fbf73;">1</sup>,</span>
             <span class="author-block">
-              <a href="https://yitaolong.github.io/">Yitao Long</a><sup style="color:#6fbf73;">2</sup>,</span>
+              <a href="https://yitaolong.github.io/">Yitao Long</a><sup style="color:#ed4b82;">2</sup>,</span>
             <span class="author-block">
-              Hongjun Liu</a><sup style="color:#6fbf73;">2</sup>,
+              Hongjun Liu</a><sup style="color:#ed4b82;">2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://ryokamoi.github.io/">Ryo Kamoi</a><sup style="color:#ed4b82">3</sup>,
+              <a href="https://ryokamoi.github.io/">Ryo Kamoi</a><sup style="color:#ffac33">3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://linyongnan.github.io/">Linyong Nan</a><sup style="color:#ffac33">1</sup>,
+              <a href="https://linyongnan.github.io/">Linyong Nan</a><sup style="color:#6fbf73">1</sup>,
             </span>
             <span class="author-block">
-              Lyuhao Chen</a><sup style="color:#ed4b82">4</sup>,
+              Lyuhao Chen</a><sup style="color:#3271ae">4</sup>,
             </span>
             <span class="author-block">
-              <a href="https://sites.google.com/site/hcheng2site/Home">Hao Cheng</a><sup style="color:#ffac33">3</sup>,
+              <a href="https://yixinl7.github.io/">Yixin Liu</a><sup style="color:#6fbf73">1</sup>,
             </span>
             <span class="author-block">
-              <a href="http://web.cs.ucla.edu/~kwchang/">Kai-Wei Chang</a><sup style="color:#6fbf73;">1</sup>,
+              <a href="https://xiangrutang.github.io/">Xiangru Tang</a><sup style="color:#6fbf73;">1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.microsoft.com/en-us/research/people/mgalley/?from=https://research.microsoft.com/~mgalley&type=exact">Michel Galley</a><sup style="color:#ffac33">3</sup>,
+              <a href="https://ryanzhumich.github.io/">Rui Zhang</a><sup style="color:#ffac33">3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.microsoft.com/en-us/research/people/jfgao/">Jianfeng Gao</a><sup style="color:#ffac33">3</sup>
+              <a href="https://armancohan.com/">Arman Cohan</a><sup style="color:#6fbf73">1</sup><sup style="color:#806d9e">5</sup>
             </span>
           </div>
 
@@ -158,8 +158,9 @@
             <span class="author-block"><sup style="color:#6fbf73;">1</sup>Yale University,</span><br>
             <span class="author-block"><sup style="color:#ed4b82">2</sup>New York University,</span>
             <span class="author-block"><sup style="color:#ffac33">3</sup>Penn State University</span><br>
-            <span class="author-block"><sup style="color:#ffac33">4</sup>Carnegit Mellon University</span>
-            <span class="paper-block"><b style="color:#f41c1c">ICLR 2024 Oral</b> (85 in 7304, 1.2%)</span>
+            <span class="author-block"><sup style="color:#3271ae">4</sup>Carnegie Mellon University</span>
+            <span class="author-block"><sup style="color:#806d9e">5</sup>Allen Institute for AI</span>
+            <span class="paper-block"><b style="color:#eb333f">ACL 2024</span>
           </div>
         
           <!-- <section> -->
