--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           </h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://yilunzhao.github.io//">Yilun Zhao</a><sup style="color:#6fbf73;">1</sup>,</span>
+              <a href="https://yilunzhao.github.io//">Yilun Zhao</a><sup style="color:#36292f;">*</sup><sup style="color:#6fbf73;">1</sup>,</span>
             <span class="author-block">
-              <a href="https://yitaolong.github.io/">Yitao Long</a><sup style="color:#ed4b82;">2</sup>,</span>
+              <a href="https://yitaolong.github.io/">Yitao Long</a><sup style="color:#36292f;">*</sup><sup style="color:#ed4b82;">2</sup>,</span>
             <span class="author-block">
               Hongjun Liu</a><sup style="color:#ed4b82;">2</sup>,
             </span>
@@ -159,7 +159,7 @@
             <span class="author-block"><sup style="color:#ed4b82">2</sup>New York University,</span>
             <span class="author-block"><sup style="color:#ffac33">3</sup>Penn State University</span><br>
             <span class="author-block"><sup style="color:#3271ae">4</sup>Carnegie Mellon University</span>
-            <span class="author-block"><sup style="color:#806d9e">5</sup>Allen Institute for AI</span>
+            <span class="author-block"><sup style="color:#806d9e">5</sup>Allen Institute for AI</span><br>
             <span class="paper-block"><b style="color:#eb333f">ACL 2024</span>
           </div>
         
