--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <span class="author-block"><sup style="color:#ffac33">3</sup>Penn State University</span><br>
             <span class="author-block"><sup style="color:#3271ae">4</sup>Carnegie Mellon University</span>
             <span class="author-block"><sup style="color:#806d9e">5</sup>Allen Institute for AI</span><br>
-            <span class="paper-block"><b style="color:#eb333f">ACL 2024</span>
+            <span class="paper-block">ACL 2024</span>
           </div>
         
           <!-- <section> -->
