--- a/index.html
+++ b/index.html
@@ -1701,25 +1701,28 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
-    <pre><code>@inproceedings{lu2024mathvista,
-  author    = {Lu, Pan and Bansal, Hritik and Xia, Tony and Liu, Jiacheng and Li, Chunyuan and Hajishirzi, Hannaneh and Cheng, Hao and Chang, Kai-Wei and Galley, Michel and Gao, Jianfeng},
-  title     = {MathVista: Evaluating Mathematical Reasoning of Foundation Models in Visual Contexts},
-  booktitle={International Conference on Learning Representations (ICLR)},
-  year      = {2024}
+    <pre><code>@misc{zhao2023docmathevalevaluatingnumericalreasoning,
+      title={DocMath-Eval: Evaluating Numerical Reasoning Capabilities of LLMs in Understanding Long Documents with Tabular Data}, 
+      author={Yilun Zhao and Yitao Long and Hongjun Liu and Linyong Nan and Lyuhao Chen and Ryo Kamoi and Yixin Liu and Xiangru Tang and Rui Zhang and Arman Cohan},
+      year={2023},
+      eprint={2311.09805},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2311.09805}, 
 }</code></pre>
   </div>
 </section>
 
 <section>
   <div class="section" id="org-banners" style="display:flex">
-    <a href="https://www.ucla.edu/" target="_blank" rel="external">
-        <img class="center-block org-banner" src="static/images/ucla.png">
+    <a href="https://www.yale.edu/" target="_blank" rel="external">
+        <img class="center-block org-banner" src="static/images/yale.png">
     </a>
-    <a href="https://www.washington.edu/" target="blank" class="ext-link">
-        <img class="center-block org-banner" src="static/images/uw.png">
+    <a href="https://www.nyu.edu/" target="blank" class="ext-link">
+        <img class="center-block org-banner" src="static/images/nyu.png">
     </a>
-    <a href="https://www.microsoft.com/en-us/research/" target="_blank" rel="external">
-        <img class="center-block org-banner" src="static/images/microsoft.png">
+    <a href="https://allenai.org/" target="_blank" rel="external">
+        <img class="center-block org-banner" src="static/images/ai2.png">
     </a>
   </div>
 </section>
