--- a/index.html
+++ b/index.html
@@ -287,56 +287,54 @@
     </div>
   </div>
 </section> -->
-
-
-<section class="section">
-  <div class="container" style="margin-top: -150px; margin-bottom: -100px;">
-    <div class="columns is-centered m-6">
-      <div class="column is-full has-text-centered content">
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="box m-5">
-            <div class="content has-text-centered">
-              <img src="static/images/tease_scores_version4_gemini.png" alt="geometric reasoning" width="84%"/>
-              <p> Accuracy scores of one leading LLM (i.e., PoT GPT-4), four primary LMMs, random chance, and human performance our proposed 
-              <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-              <span class="mathvista">MathVista</span>
-              across mathematical reasoning and visual context types. PoT refers to program-of-thought prompting, and PoT GPT-4 is a textual LLM augmented with the caption and OCR text. GPT-4V is manually evaluated via the playground chatbot. <b class="best-score-text" style="color: #C6011F"> The scores of Gemini Ultra are from the Gemini Team, Google.</b>
-              </p>
-            </div>
-          </div>
-          <div class="box m-5">
-            <div class="content has-text-centered">
-              <img src="static/images/tease_scores_gpt4v.png" alt="geometric reasoning" width="84%"/>
-              <p> Accuracy scores of one leading LLM (i.e., PoT GPT-4), four primary LMMs, random chance, and human performance our proposed 
-              <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-              <span class="mathvista">MathVista</span>
-              across mathematical reasoning and visual context types. PoT refers to program-of-thought prompting, and PoT GPT-4 is a textual LLM augmented with the caption and OCR text. GPT-4V is manually evaluated via the playground chatbot.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grid Example</title>
+    <style>
+        .image-container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); /* 三列布局 */
+            gap: 10px; /* 图片之间的间距 */
+            justify-items: center;
+            align-items: center;
+        }
+        .image-container img {
+            width: 100%; /* 图片自适应网格单元格宽度 */
+            height: auto; /* 保持图片比例 */
+      
+        }
+    </style>
+</head>
+<body>
+    <div class="image-container">
+        <img src="static/images/fig1.png" alt="Image 1">
+        <img src="static/images/fig2.png" alt="Image 2">
     </div>
-</section>
-
+</body>
+</html>
 
 <section class="section">
-  <div class="container" style="margin-bottom: 2vh;">
-    <!-- Abstract. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Introduction</h2>
+  <div class="container" style="margin: auto;">
+    <div class="columns is-centered">
+      <div class="column is-full has-text-centered content">
         <div class="content has-text-justified">
           <p>
-            Recent LLMs have demonstrated remarkable performance in solving exam-like math word problems. However, the degree to which these numerical reasoning skills are effective in real-world scenarios, particularly in expert domains, is still largely unexplored. This paper introduces DOCMATH-EVAL, a comprehensive benchmark specifically designed to evaluate the numerical reasoning capabilities of LLMs in the context of understanding and analyzing financial documents containing both text and tables. We evaluate a wide spectrum of 27 LLMs, including those specialized in math, coding, and finance, with Chain-of-Thought and Program-of-Thought prompting methods. We found that even the current best-performing system (i.e., GPT-4) still significantly lags behind human experts in solving complex numerical reasoning problems grounded in long contexts. We believe DOCMATH-EVAL can be used as a valuable benchmark to evaluate LLMs’ capabilities to solve challenging numerical reasoning problems in expert domains.
-          </p>
+            We introduce DOCMATH-EVAL, a comprehensive benchmark designed to systematically evaluate LLMs’ numerical reasoning ability to understand and interpret financial documents. This
+            includes a newly developed, challenging evaluation set and three adapted evaluation sets for
+            varying difficulty levels.
+            • We conduct an extensive evaluation encompassing a wide range of LLMs, including those specialized in coding and finance. We also incorporate different prompting methods (e.g., CoT and
+            PoT) to comprehensively assess the capabilities
+            and limitations of existing LLMs in our task.
+            • Our experimental results reveal a noticeable performance gap compared to human experts in
+            more complex scenarios (e.g., problems requiring complex numerical reasoning over long documents). This highlights the limitations of current
+            LLMs in complex real-world applications and
+            the need for continued advancements.          </p>
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
-  </div>
-</section>
-
 
 <section class="section">
   <div class="container">
@@ -1633,68 +1631,6 @@
         </div>
       </div>
     </div>
-
-    <div class="container is-full has-text-centered content m-6" id="result-table">
-      <h2 class="title is-3" id="explorer">Explorer</h2>
-      <p>Explore the outputs of each model on <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-        <span class="mathvista">MathVista</span></p>
-      <div class="level has-text-centered" style="position: sticky; top: 0; z-index: 20;">
-        <div class="level-item box m-3" style="width: 30%; background: rgba(250, 250, 250, 1);">
-          <button class="button" style="width: 100%; border: none; background: rgba(250, 250, 250, 1);" id="refresh-qids">
-            <span class="icon is-large">
-              <i class="fa fa-redo fa-lg" aria-hidden="true"></i>
-            </span>
-            <p class="title is-4 m-0">Refresh Question</p>
-          </button>
-        </div>
-        <div class="level-item box m-3" style="width: 30%; background: rgba(250, 250, 250, 1);">
-          <div class="dropdown" style="width: 100%;">
-            <div class="dropdown-trigger has-text-justified" style="width: 100%; ">
-              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" style="width: 100%; border: none; background: rgba(250, 250, 250, 1);">
-                <p class="title m-0 is-4 dropdown-display">Multimodal Bard</p>
-                <span class="icon is-large" style="position: absolute; right:0;">
-                  <i class="fas fa-angle-down fa-lg" aria-hidden="true"></i>
-                </span>
-              </button>
-            </div>
-            <div class="dropdown-menu" id="dropdown-menu" role="menu" style="width:100%;">
-              <div class="dropdown-content">
-                <!-- <a class="dropdown-item">
-                  Dropdown item
-                </a>
-                <a class="dropdown-item">
-                  Other dropdown item
-                </a> -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="level-item box m-3" style="width: 30%; background: rgba(250, 250, 250, 1);">
-          <div class="dropdown" style="width: 100%;">
-            <div class="dropdown-trigger has-text-justified" style="width: 100%;">
-              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" style="width: 100%; border: none; background: rgba(250, 250, 250, 1);">
-                <p class="title m-0 is-4 dropdown-display">CoT GPT4 (Caption+OCR)</p>
-                <span class="icon is-large" style="position: absolute; right:0;">
-                  <i class="fas fa-angle-down fa-lg" aria-hidden="true"></i>
-                </span>
-              </button>
-            </div>
-            <div class="dropdown-menu" id="dropdown-menu" role="menu" style="width:100%;">
-              <div class="dropdown-content">
-                <!-- <a class="dropdown-item">
-                  Dropdown item
-                </a>
-                <a class="dropdown-item">
-                  Other dropdown item
-                </a> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 
 <!-- @PAN TODO: bibtex -->
